Fix about page hero section layout issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,6 @@ Font (Olive Green): #556B2F;
 }
 
 .portrait-image {
-    width: 50%;
     max-width: 300px;
     max-height: fit-content;
     float: left;
@@ -284,8 +283,6 @@ footer {
   
   .row {
     margin: 25px 0; /* 25px top and bottom, 0 left and right */
-    display: flex;
-    flex-direction: column;
   }
   
   .column {
@@ -329,93 +326,13 @@ footer {
     float: left;
   }
 
-  /* ====Small devices (480x and larger) ====*/
-  @media screen and (min-width: 480px) {
-    main, footer {
-      top: 200px;
-    }
-    .row {
-      flex-direction: column;
-      ;
-    }
-    font {
-      size: 12px;
-    }
-    .button{
-      width:100px;
-      padding: 3%;
-    }
-    .container {
-      padding: 10px;
-      max-width: 1400px;
-      margin-left:auto;
-      margin-right: auto;
-    }
-    .button {
-      font-size: 14px;
-      font-weight: 500;
-      padding: 14px;
-      text-align: center;
-    }
-  
-    nav > ul {
-      list-style-type: none;
-      padding: 0;
-      text-transform: uppercase;
-      display:inline-block;
-      width: 100%;
-      margin: 10px;
-  }
-}
- 
-
-/* ===Medium devices (640px and larger)====== */
-@media only screen and (min-width: 640px) {
-  main, footer {
-    top: 90px;
-  }
-  header {
-    text-align: unset;
-    padding: 20px 0 13 px; 
-  }
-  nav {
-    width: auto;
-    float: right; 
-    margin-top: 4px;
-  }
-  font {
-    size: 16px;
-  }
-  .hero {
-  text-align: left;
-}
-  .col-md-6 {
-  width: 50%;
-}
-
-#about-page h3 
-{ margin-top: 0;
-}
-}
-
-/* ==Large devices (1024px or larger)===== */
-@media only screen and (min-width: 1024px) {
-  main, footer { 
-    top: 300px;
-  }
-  .col-md-6 {
-    width: 100%;
-  }
-  header {
-      font-size: 2.3em;
-}
-}
 
 
 
 [class*="col-"] {
   float: left;
   padding: 10px;
+  box-sizing: border-box;
 }
 
 .berlin-illustration {
@@ -460,4 +377,89 @@ footer {
 
 .cloud-back {
   animation: 30s cloud-move-reverse infinite alternate linear;
+}
+
+  /* ====Small devices (480x and larger) ====*/
+  @media screen and (min-width: 480px) {
+    main, footer {
+      top: 200px;
+    }
+
+    font {
+      size: 12px;
+    }
+    .button{
+      width:100px;
+      padding: 3%;
+    }
+    .container {
+      padding: 10px;
+      max-width: 1200px;
+      margin-left:auto;
+      margin-right: auto;
+    }
+    .button {
+      font-size: 14px;
+      font-weight: 500;
+      padding: 14px;
+      text-align: center;
+    }
+  
+    nav > ul {
+      list-style-type: none;
+      padding: 0;
+      text-transform: uppercase;
+      display:inline-block;
+      width: 100%;
+      margin: 10px;
+  }
+}
+ 
+
+/* ===Medium devices (640px and larger)====== */
+@media only screen and (min-width: 640px) {
+  main, footer {
+    top: 90px;
+  }
+  header {
+    text-align: unset;
+    padding: 20px 0 13 px; 
+  }
+  nav {
+    width: auto;
+    float: right; 
+    margin-top: 4px;
+  }
+  font {
+    size: 16px;
+  }
+  .hero {
+  text-align: left;
+}
+  .col-md-6 {
+    width: 50%;
+  }
+
+  .col-md-4 {
+    width: 33.33%;
+  }
+
+  .col-md-8 {
+    width: 66.66%;
+  }
+
+  #about-page h3 { 
+    margin-top: 0;
+  }
+}
+
+/* ==Large devices (1024px or larger)===== */
+@media only screen and (min-width: 1024px) {
+  main, footer { 
+    top: 300px;
+  }
+
+  header {
+      font-size: 2.3em;
+  }
 }
